# metaheuristics_research

./: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  main  main.cpp  results.ipynb  results_freq.ipynb  Метаэвристика.docx
aoa/airplane512.pngaoa/: blocks.txt  saved.txt
aoa/barbara512.pngaoa/: blocks.txt  saved.txt
aoa/boat512.pngaoa/: blocks.txt
aoa/lena512.pngaoa/: saved.txt
aoa/peppers512.pngaoa/: blocks.txt  saved.txt
aoa/stream_and_bridge512.pngaoa/: saved.txt
aoa2/baboon512.pngaoa/: blocks.txt
aoa2/barbara512.pngaoa/: blocks.txt
aoa2/boat512.pngaoa/: saved.txt
aoa2/peppers512.pngaoa/: blocks.txt
aoa3/airplane512.pngaoa/: blocks.txt
aoa3/baboon512.pngaoa/: blocks.txt
aoa3/goldhill512.pngaoa/: saved.txt
aoa3/peppers512.pngaoa/: saved.txt
de/barbara512.pngde/: blocks.txt
de/boat512.pngde/: blocks.txt
de/stream_and_bridge512.pngde/: saved.txt
de2/baboon512.pngde/: blocks.txt
de2/barbara512.pngde/: blocks.txt
de2/boat512.pngde/: blocks.txt
de2/goldhill512.pngde/: blocks.txt
de2/stream_and_bridge512.pngde/: blocks.txt
de3/boat512.pngde/: blocks.txt
de3/goldhill512.pngde/: blocks.txt
ica/airplane512.pngica/: blocks.txt
ica/baboon512.pngica/: blocks.txt
ica/barbara512.pngica/: saved.txt
ica/lena512.pngica/: saved.txt
ica/stream_and_bridge512.pngica/: blocks.txt  saved.txt
ica2/baboon512.pngica/: blocks.txt
ica2/goldhill512.pngica/: saved.txt
ica2/lena512.pngica/: blocks.txt
ica2/peppers512.pngica/: saved.txt
ica3/airplane512.pngica/: blocks.txt
(+373 files in other folders)
